--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"]}
 sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "mysql", "macros"]}
 dotenv = "0.15.0"
 serde = { version = "1.0.219", features = ["derive"]}
+thiserror = "2.0.12"
