--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ actix-web = "4.11.0"
 tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"]}
 utoipa = { version = "5.3.1", features = ["actix_extras", "macros"]}
 utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"]}
-sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "mysql", "macros"]}
+sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "mysql", "macros", "migrate"]}
 dotenv = "0.15.0"
 serde = { version = "1.0.219", features = ["derive"]}
 thiserror = "2.0.12"
