--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2024"
 [dependencies]
 actix-web = "4.11.0"
 tokio = { version = "1.45.1", features = ["full"]}
-utoipa = { version = "5.3.1", features = ["actix_extras", "macros"]}
+utoipa = { version = "5.3.1", features = ["actix_extras", "macros", "chrono"]}
 utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"]}
-sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "mysql", "macros", "migrate"]}
+sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "mysql", "macros", "migrate", "chrono", "json"]}
 dotenv = "0.15.0"
 serde = { version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
@@ -16,3 +16,7 @@ thiserror = "2.0.12"
 async-trait = "0.1.88"
 mockall = "0.13.1"
 reqwest = { version = "0.12.22", features = ["json"]}
+chrono = { version = "0.4.41", features = ["serde"]}
+chrono-tz = "0.10.3"
+clokwerk = { version = "0.4.0", features = ["async"]}
+env_logger = "0.11.8"
