--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ chrono = { version = "0.4.41", features = ["serde"]}
 chrono-tz = "0.10.4"
 clokwerk = { version = "0.4.0", features = ["async"]}
 env_logger = "0.11.8"
+tokio-retry = "0.3.0"
