--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,8 @@ clokwerk = { version = "0.4.0", features = ["async"]}
 env_logger = "0.11.8"
 tokio-retry = "0.3.0"
 uuid = { version = "1.17.0", features = ["v4", "serde"]}
+bcrypt = "0.17.0"
+jsonwebtoken = "9.3.1"
+redis = { version = "0.32.4", features = ["tokio-comp", "r2d2"]}
+r2d2 = "0.8.10"
+anyhow = "1.0.98"
