--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ serde_json = "1.0.140"
 thiserror = "2.0.12"
 async-trait = "0.1.88"
 mockall = "0.13.1"
-reqwest = { version = "0.12.22", features = ["json"]}
+reqwest = { version = "0.12.22", features = ["json", "rustls-tls"]}
 chrono = { version = "0.4.41", features = ["serde"]}
 chrono-tz = "0.10.4"
 clokwerk = { version = "0.4.0", features = ["async"]}
